# embeddington

./: .gitignore  .gitmodules  .mcp.json  CHANGELOG.md  LICENSE  README.md  SECURITY.md  install.sh  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yml  release-tag.yml
consumer/: .env.example  README.md  __init__.py  baseline_import.py  cli.py  cursor_store.py  docker-compose.yml  fetcher.py  lexical_index.py  release_client.py  restore_ops.py  state_paths.py  updater.py  writers.py
consumer/embed/: Dockerfile  README.md  app.py  requirements.txt
installer/: __init__.py  claude_step.py  cli.py  cron.py  docker_ladder.py  errors.py  import_step.py  preflight.py  runner.py  stack.py  state.py  ui.py  uninstall.py
mcp/: .env.example  .gitignore  README.md  RESPONSE_SHAPES.md  arango_client.py  budget.py  config.py  embedding_client.py  enrich.py  grounding.py  hybrid.py  pytest.ini  qdrant_client.py  requirements-dev.txt  requirements.txt  server.py
mcp/tests/: battery_queries.py  battery_sweep.py  conftest.py  docker-compose.battery.yml  gold_metrics.py  gold_pools.py  ontology_frozen.py  ontology_metrics.py  ontology_pairs.py  ontology_rules.py  ontology_snapshot.py  sweep_io.py  test_arango_client.py  test_battery_live.py  test_battery_queries.py  test_battery_sweep_counters.py  test_budget.py  test_capture_pools.py  test_config.py  test_embedding_client.py  test_enrich.py  test_gold_artifacts.py  test_gold_metrics.py  test_gold_pools.py  test_grounding.py  test_hybrid.py  test_integration.py  test_ontology_frozen.py  test_ontology_live.py  test_ontology_metrics.py  test_ontology_pairs.py  test_ontology_rules.py  test_ontology_snapshot.py  test_qdrant_client.py  test_registry.py  test_server_main.py  test_sweep_io.py  test_tools.py
mcp/tests/battery_results/: 2026-07-17-sweep.md  2026-07-18-baseline-pre36-sweep.json  2026-07-18-baseline-pre36-sweep.md  2026-07-18-baseline-pre36-worst-response.json  2026-07-19-pr3-final-sweep.json  2026-07-19-pr3-final-sweep.md  2026-07-19-pr3-final-worst-response.json  2026-07-19-pr4-final-identifier-sweep.json  2026-07-19-pr4-final-identifier-sweep.md  2026-07-19-pr4-final-sweep.json  2026-07-19-pr4-final-sweep.md  2026-07-20-closing-audit.md  2026-07-20-pr6-final-identifier-sweep.json  pr3-arm-0.20-sweep.md  (+27 more)
src/embeddington/: README.md  __init__.py  errors.py
tests/: README.md  conftest.py  test_errors.py  test_public_api.py  test_readme_pins.py
tests/apply/: test_apply_diff.py  test_cursor.py  test_fakes.py  test_idempotency.py
tests/consumer/: conftest.py  test_baseline_import.py  test_cli.py  test_cli_format.py  test_cursor_store.py  test_fetcher.py  test_lexical_index.py  test_release_client.py  test_restore_ops.py  test_state_paths.py  test_updater.py  test_writers.py
tests/format/: test_bundle.py  test_manifest.py  test_records.py
tests/installer/: conftest.py  test_claude_step.py  test_cli.py  test_cron.py  test_docker_ladder.py  test_errors.py  test_import_step.py  test_preflight.py  test_runner.py  test_stack.py  test_state.py  test_ui.py  test_uninstall.py
(+35 files in other folders)
