[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "embeddington"
version = "0.1.1"
description = "Install and keep current a shared Qdrant + ArangoDB knowledge graph"
requires-python = ">=3.12"
# Everything `embeddington-consume` needs to restore and apply updates.
dependencies = [
    "zstandard>=0.22",
    "qdrant-client>=1.10",
    "python-arango>=8.0",
]

[project.optional-dependencies]
setup = ["rich>=13"]
# rich repeats here because the installer test suite imports it directly and CI
# installs only [dev] — the dev env must be self-sufficient.
dev = ["pytest>=8.0", "pytest-cov>=5", "mypy>=1.0", "rich>=13"]

[tool.setuptools.packages.find]
where = ["src", "."]
include = ["embeddington*", "consumer*", "installer*"]

[project.scripts]
embeddington-consume = "consumer.cli:main"
embeddington-setup = "installer.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
  "integration: requires live infra (Postgres/Qdrant/Arango/vLLM/GPU); runs only on the self-hosted Spark runner",
]

[tool.mypy]
ignore_missing_imports = true

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
